third_party/move/tools/move-package/tests/test_sources/parsing/version_not_a_string/Move.exp
Unable to parse Move package manifest: TOML parse error at line 3, column 14
  |
3 | version = 0.1.2
  |              ^
expected newline, `#`

